syntax = "proto3";

package api.note_v1;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/Din4EE/note-service-api/pkg/note_v1";

service NoteService {
  rpc CreateNote(CreateNoteRequest) returns (CreateNoteResponse);
  rpc GetNote(GetNoteRequest) returns (GetNoteResponse);
  rpc GetListNote(GetListNoteRequest) returns (GetListNoteResponse);
  rpc UpdateNote(UpdateNoteRequest) returns (google.protobuf.Empty);
  rpc DeleteNote(DeleteNoteRequest) returns (google.protobuf.Empty);
}

message Note {
  string id = 1;
  string title = 2;
  string text = 3;
  string author = 4;
}

message CreateNoteRequest {
  string title = 1;
  string text = 2;
  string author = 3;
}

message CreateNoteResponse {
  string id = 1;
}

message GetNoteRequest {
  string id = 1;
}

message GetNoteResponse {
  Note note = 1;
}

message GetListNoteRequest {
  int64 limit = 1;
  int64 offset = 2;
  string search_query = 3;
}

message GetListNoteResponse {
  repeated Note notes = 1;
  int64 total_count = 5;
}

message UpdateNoteRequest {
  string id = 1;
  google.protobuf.StringValue title = 2;
  google.protobuf.StringValue text = 3;
  google.protobuf.StringValue author = 4;
}

message DeleteNoteRequest {
  string id = 1;
}